# dioxus-app

./: .gitignore  Cargo.toml  Dioxus.toml  flake.nix
src/: main.rs
